# project-10-django-REST

./: .gitignore  API_TESTING_COMPLETE_GUIDE.md  CURL_TESTS.md  GREEN_CODE_OPTIMIZATIONS.md  ISSUE_COMMENT_API_GUIDE.md  MCD.md  README.md  SoftDesk_API_Postman_Collection.json  TESTING_GUIDE.md  TODO.md  api_urls.py  create_superuser.py  demo_green_code.py  demo_n_plus_1.py  diagnose_project.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_all_tests.py  run_tests_universal.py  server.bat  test_api.py  test_complete_api.py  test_etape4_complete.py  test_issue_comment_api.py  test_issue_comment_models.py  test_issue_comment_simple.py  test_models.py  test_models_simple.py  test_rgpd_age.py  test_rgpd_api.py  test_rgpd_compliance.py  test_simple.py
docs/: API_GUIDE.md  API_TESTING_COMPLETE_GUIDE.md  ARCHITECTURE.md  DEFAULTROUTER_GUIDE.md  DJANGO_GUIDE.md  GREEN_CODE_GUIDE.md  INDEX.md  ISSUE_COMMENT_API_GUIDE.md  MCD.md  MODELVIEWSET_GUIDE.md  NESTED_ROUTER_GUIDE.md  N_PLUS_1_EXPLAINED.md  RAW_STRINGS_GUIDE.md  README.md  RGPD_COMPLIANCE.md  SECURITY_GUIDE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USERS_API_TESTING.md  code-explanation-security-compliance.md  debug-notes.md  mcd.md  permissions-documentation.md  serializers-architecture-guide.md  userviewset-refactoring-summary.md  viewsets-permissions-check.md
issues/: admin.py  models.py  permissions.py  permissions_simple.py  serializers.py  urls.py  views.py  views_simple.py
softdesk_support/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
tests/: README.md  __init__.py  (+4 more)
(+55 files in other folders)
